Refactor implementation with focus on performance improvement

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "name": "copilot-bridge",
   "displayName": "Copilot Bridge",
   "description": "Local OpenAI-compatible chat endpoint (inference) bridging to GitHub Copilot via the VS Code Language Model API.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "publisher": "thinkability",
   "repository": {
     "type": "git",
@@ -22,10 +22,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished",
-    "onCommand:bridge.enable",
-    "onCommand:bridge.disable",
-    "onCommand:bridge.status"
+    "onStartupFinished"
   ],
   "main": "./out/extension.js",
   "contributes": {
